hphp/hack/test/typecheck/parse_int_with_underscore_bad5.php.exp
File "parse_int_with_underscore_bad5.php", line 5, characters 17-18:
A binary literal needs at least one digit. (Parsing[1002])
