hphp/hack/test/typecheck/parse_int_with_underscore_bad5.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

class Foo {
  const int d = 0b_12;
}
